partial #2969 - fixed shift list bug

--- a/www/assets/cockpit/scss/cockpit.scss
+++ b/www/assets/cockpit/scss/cockpit.scss
@@ -910,6 +910,10 @@ input {
 	color: #4ecdc4;
 }
 
+.drivers-shift .no-drivers{
+	font-style: italic;
+}
+
 
 
 /* new stuff */
